# BEGIN: Copyright 
# Copyright (C) 2020 Rector and Visitors of the University of Virginia 
# All rights reserved 
# END: Copyright 

# BEGIN: License 
# Licensed under the Apache License, Version 2.0 (the "License"); 
# you may not use this file except in compliance with the License. 
# You may obtain a copy of the License at 
#   http://www.apache.org/licenses/LICENSE-2.0 
# END: License 

cmake_minimum_required (VERSION 3.11)

file(GLOB HEADERS_PROPENSITY *.h)
file(GLOB SOURCES_PROPENSITY *.cpp)

add_library(propenisty SHARED ${SOURCES_PROPENSITY} ${HEADERS_PROPENSITY})

